src/ui/sonarr_ui/system/snapshots/managarr__ui__sonarr_ui__system__system_ui_tests__tests__snapshot_tests__system_ui_renders_system_tab_task_and_events_loading.snap
---
source: src/ui/sonarr_ui/system/system_ui_tests.rs
expression: output
---
╭  Tasks  ────────────────────────────────────────────────────────────────────────╮╭  Queued Events  ───────────────────────────────────────────────────────────────╮
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│ Loading ...                                                                     ││ Loading ...                                                                    │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
╰─────────────────────────────────────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────╯
╭  Logs  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│2025-12-16 16:40:59 UTC|INFO|ImportListSyncService|No list items to process                                                                                        │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
